--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -1,1 +1,2 @@
-%section.articles= article_summaries(latest_articles)
+- articles.each do |article|
+  = haml(article.template.to_sym, :layout => false, :locals => {:article => article})
