--- a/views/header.haml
+++ b/views/header.haml
@@ -1,7 +1,1 @@
-.topbar
-  .topbar-inner
-    .container
-      %a.brand(href="/")= @heading
-      %ul.nav
-        %li
-          %a(href="/blog") Blog
+%header(style="margin-top: 40px; margin-bottom: 40px;") &nbsp;
