--- a/views/templates/page.haml
+++ b/views/templates/page.haml
@@ -1,18 +1,7 @@
 .container
-  %article(role="main")
-    ~ @page.to_html(self)
-
-    %section.pages
-      = article_summaries(@page.pages)
-
-    - unless @page.articles.empty?
-      %section.articles
-        %header
-          %h1= articles_heading
-        = article_summaries(@page.articles)
-
-    = haml :page_meta, :layout => false, :locals => { :page => @page }
-
-  = haml :comments, :layout => false
-
-= haml :sidebar, :layout => false
+	%section
+		.row
+			.span12
+				~ @page.to_html(self)
+			.span4
+				foo
