add tracking with gauges

--- a/views/layouts/layout.haml
+++ b/views/layouts/layout.haml
@@ -24,3 +24,16 @@
     = haml :header, :layout => false
     = yield
     = haml :footer, :layout => false
+
+    :javascript
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '4ead45b2613f5d1d9f000003');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
