--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,6 +1,9 @@
-.container
-  %footer.branding
+%footer.footer
+  .container
     %p
       Powered by Nesta, a
       = succeed "." do
         %a(href="http://nestacms.com") Ruby CMS
+      Layout based on
+      = succeed "." do
+        %a(href="http://twitter.github.com/bootstrap") Bootstrap
