Add some styling

--- a/views/master.scss
+++ b/views/master.scss
@@ -1,3 +1,9 @@
+.article {
+  border-top: 1px solid #e5e5e5;
+  padding-top: 10px;
+  margin-bottom: 40px;
+}
+
 .footer {
     background-color: #EEEEEE;
     border-top: 1px solid #E5E5E5;
