--- a/views/types/quote.haml
+++ b/views/types/quote.haml
@@ -1,7 +1,6 @@
-.article.link.row
+.article.quote.row
   .span4
     .date
       %a{href: url_for(article)}= format_date article.date
-
   .span8
     ~ article.body
