--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,12 +1,9 @@
-%nav.breadcrumb
-  %a(href="/") Home
-
-#content
-  %section(role="main")
-    %h1 Page not found
-
-    %p
-      Please try another page or, if you think something is wrong with
-      our site, do get in touch and let us know.
-
-= haml :sidebar, :layout => false
+.container
+  .row
+    .span12
+      %h1 Page not found
+      %p
+        Please try another page or, if you think something is wrong with
+        our site, do get in touch and let us know.
+    .span4
+      = haml :sidebar, :layout => false
