--- a/views/atom.haml
+++ b/views/atom.haml
@@ -19,7 +19,10 @@
   - @articles.each do |article|
     %entry
       %title= article.heading
-      %link{ :href => url_for(article), :type => 'text/html', :rel => 'alternate' }
+      - if article.metadata('type') == "link" and article.metadata('url')
+        %link{ :href => article.metadata('url'), :type => 'text/html', :rel => 'alternate' }
+      - else
+        %link{ :href => url_for(article), :type => 'text/html', :rel => 'alternate' }
       %id= atom_id(article)
       %content(type='html')&= find_and_preserve(absolute_urls(article.body(self)))
       %published= article.date(:xmlschema)
