--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -21,29 +21,92 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-$on-palm:          600px;
-$on-laptop:        800px;
 
-
-
-// Using media queries with like this:
-// @include media-query($palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+body { 
+    padding-top: 3rem;
+    background: rgb(192, 193, 252) url('/catbg.jpg') repeat-y;
 }
 
+body.topbar {
+    padding-top: 0;
+    background:url('/background.jpg');
+    
+}
 
+h2 { 
+    color: yellow;
+    font-size: 3rem;
+    text-align: center
+}
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+.marquee {
+    // width: 450px;
+    margin: 0 auto;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
+.marquee span {
+    display: inline-block;
+    padding-left: 100%;  /* show the marquee just outside the paragraph */
+    animation: marquee 5s linear infinite;
+}
+
+/* Make it move */
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
+.wordart {
+  font-family: Arial, sans-serif;
+  font-size: 4em;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.wordart.tilt {
+    display: inline-block;
+    transform: scaleY(2) perspective(1em) rotateX(15deg) translate3d(-19%, -14%, -0.4em);
+    -webkit-transform: scaleY(2) perspective(1em) rotateX(15deg) translate3d(-19%, -14%, -0.4em);
+    -moz-transform: scaleY(2) perspective(1em) rotateX(15deg) translate3d(-19%, -14%, -0.4em);
+    -o-transform: scaleY(2) perspective(1em) rotateX(15deg) translate3d(-19%, -14%, -0.4em);
+    -ms-transform: scaleY(2) perspective(1em) rotateX(15deg) translate3d(-19%, -14%, -0.4em);
+}
+
+.wordart.tilt .text {
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    background: #390c0b;
+    background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…IgaGVpZ2h0PSIxIiBmaWxsPSJ1cmwoI2dyYWQtdWNnZy1nZW5lcmF0ZWQpIiAvPgo8L3N2Zz4=);
+    background: -moz-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #390c0b), color-stop(73%, #f6bf28));
+    background: -webkit-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
+    background: -o-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
+    background: -ms-linear-gradient(top, #390c0b 0%, #f6bf28 73%);
+    background: linear-gradient(to bottom, #390c0b 0%, #f6bf28 73%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#390c0b', endColorstr='#f6bf28', GradientType=0);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: -0.01em;
+    -webkit-text-stroke: 0.01em #A3A3A3;
+    filter: progid:DXImageTransform.Microsoft.Glow(Color=#a3a3a3, Strength=1);
+}
+
+.wordart.tilt .text:before {
+    content: attr(data-text);
+    position: absolute;
+    z-index: -1;
+    top: 0.17em;
+    -webkit-text-fill-color: #6D4916;
+    -webkit-background-clip: border-box;
+    transform: perspective(1em) rotateX(65deg) scale(0.77);
+    -webkit-transform: perspective(1em) rotateX(65deg) scale(0.77);
+    -moz-transform: perspective(1em) rotateX(65deg) scale(0.77);
+    -o-transform: perspective(1em) rotateX(65deg) scale(0.77);
+    -ms-transform: perspective(1em) rotateX(65deg) scale(0.77);
+}
