--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </div>
 
     {% include footer.html %}
-
+    
+    <script type="text/javascript" src="/marten.js"></script>
   </body>
-
 </html>
